--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
     align-items: center;
     background-color: transparent;
-    color:white;
+    color: blueviolet;
     display: flex;
     justify-content: center;
     padding: 32px 16px;
